# MODEL

Inversion/: inverse  inverse.c
Inversion/inverse.dSYM/Contents/Resources/DWARF/: inverse
Karatsuba/: karatsuba_poly  karatsuba_poly.c
Karatsuba/karatsuba_poly.dSYM/Contents/: Info.plist
Karatsuba/karatsuba_poly.dSYM/Contents/Resources/DWARF/: karatsuba_poly
LU/: 1  1.c
LU decomposition/: LU  LU.c
LU decomposition/LU.dSYM/Contents/: Info.plist
LU decomposition/LU.dSYM/Contents/Resources/DWARF/: LU
LU/1.dSYM/Contents/Resources/DWARF/: 1
Matrix_Multiplication/: multiply_matrices  multiply_matrices.c
Matrix_Multiplication/multiply_matrices.dSYM/Contents/: Info.plist
MiniProject/ModelProject_Naaman_Le/: CMakeLists.txt  README.md
MiniProject/ModelProject_Naaman_Le/main/graphs/: Analysis.ipynb
MiniProject/ModelProject_Naaman_Le/main/src/: CMakeLists.txt  LU.c  function.c  header.h  inverse.c  main.c  multiply_matrices.c
MiniProject/ModelProject_Naaman_Le/main/time_testing_output/: InvLU_Time_testing.txt  InvStrassen_Time_testing.txt  LU_Time_testing.txt  MatrixInverse_Time_testing.txt  MatrixMult_Time_testing.txt  NaiveMult_Time_testing.txt  StrassenMult_Time_testing.txt
MiniProject/ModelProject_Naaman_Le/test/: CMakeLists.txt  test.c
PLUQ/: PLUQ  PLUQ.c  test  test.c
PLUQ/PLUQ.dSYM/Contents/: Info.plist
QRGivenMethod/: QR  QR.c
QRGivenMethod/QR.dSYM/Contents/: Info.plist
QRGram-Smidt/: QRGram-Shmidt  QRGram-Shmidt.c
QRGram-Smidt/QRGram-Shmidt.dSYM/Contents/: Info.plist
include/: gmp.h  mpfr.h
(+14 files in other folders)
